@@ -1,3 +1,8 @@
+2002-07-05  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmButtons/FvwmButtons.c (SpawnSome):
+	fixed $fg and $bg variables with the UseOld option
+
 2002-07-05  Mikhael Goikhman  <migo@homemail.com>
 
 	* FvwmScript/Widgets/Swallow.c (CheckForHangon):
